[package]
name = "gh-to-dc-forwarder"
version = "0.1.0"
edition = "2021"

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = "0.0.17"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

hmac = "0.12.1"
sha2 = "0.10.7"
hex = "0.4.3"
reqwest = { version = "0", features = ["json"] }

console_log = "1"

[profile.release]
lto = true
strip = true
codegen-units = 1
